# rm_test

./: .clang-format  .gitignore  README.md  赛事知识题.md
cv_related/: apple_detect.cpp  color_matcher.cpp  mouse_event.cpp  recorder.cpp
cv_related/res/: calib.yml
cv_related/utils/: cvtest.cpp  get_pic.cpp  test_cam.cpp
ros_related/: armor_param.yaml
ros_related/src/armor_detect/: CMakeLists.txt
ros_related/src/armor_detect/include/armor_detect/armor/: armorParam.h  detector.h  lightBar.h  numClassifier.h
ros_related/src/armor_detect/include/armor_detect/utils/: utils.h
ros_related/src/armor_detect/src/armor/: armorPad.cpp  lightBar.cpp
ros_related/src/armor_detect/src/utils/: utils.cpp
ros_related/src/armor_pipeline/: CMakeLists.txt  package.xml
ros_related/src/armor_pipeline/include/armor_pipeline/: frame_capture.h
ros_related/src/armor_pipeline/src/node/: armor_find_node.cpp  frame_cap_node.cpp
ros_related/src/armor_pipeline/src/pipeline/: frame_capture.cpp
ros_related/src/cv_topic/: package.xml
ros_related/src/str_topic/: package.xml
ros_related/src/str_topic/src/: str_pub.cpp  str_sub.cpp
src/cv_related/: CMakeLists.txt  apple_detect.cpp  armor.cpp  calibration.cpp  color_matcher.cpp  defog.cpp  mouse_event.cpp  recorder.cpp
src/cv_related/utils/: cvtest.cpp  get_pic.cpp  test_cam.cpp
src/ros_related/: pipe_params.yaml
src/ros_related/res/: pipe_params.yaml
src/ros_related/src/armor_detect/: package.xml
src/ros_related/src/armor_detect/include/armor_detect/armor/: armorPad.h
src/ros_related/src/armor_detect/include/armor_detect/utils/: timer.h
src/ros_related/src/armor_detect/src/armor/: armorParam.cpp  numClassifier.cpp
src/ros_related/src/armor_detect/src/armor/detector/: debugInfo.cpp  detect.cpp  parallel_armor_detect_alt.txt
src/ros_related/src/armor_pipeline/include/armor_pipeline/: armor_finder.h
src/ros_related/src/armor_pipeline/src/pipeline/: armor_finder.cpp
src/ros_related/src/cv_topic/: CMakeLists.txt
src/ros_related/src/cv_topic/src/: cv_pub.cpp  cv_sub.cpp  testcv.cpp
src/ros_related/src/demo_pub/: CMakeLists.txt  package.xml
src/ros_related/src/demo_pub/src/: demo_pub.cpp
src/ros_related/src/demo_sub/: CMakeLists.txt  package.xml
src/ros_related/src/demo_sub/src/: demo_sub.cpp
src/ros_related/src/str_topic/: CMakeLists.txt
